versions/2023.1.1/_sources/api/generated/BioSimSpace.Protocol.FreeEnergy.rst.txt
BioSimSpace.Protocol.FreeEnergy
===============================

.. currentmodule:: BioSimSpace.Protocol

.. autoclass:: FreeEnergy

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~FreeEnergy.__init__
      ~FreeEnergy.getLambda
      ~FreeEnergy.getLambdaIndex
      ~FreeEnergy.getLambdaValues
      ~FreeEnergy.getPerturbationType
      ~FreeEnergy.getPressure
      ~FreeEnergy.getReportInterval
      ~FreeEnergy.getRestartInterval
      ~FreeEnergy.getRunTime
      ~FreeEnergy.getTemperature
      ~FreeEnergy.getTimeStep
      ~FreeEnergy.setLambdaValues
      ~FreeEnergy.setPerturbationType
      ~FreeEnergy.setPressure
      ~FreeEnergy.setReportInterval
      ~FreeEnergy.setRestartInterval
      ~FreeEnergy.setRunTime
      ~FreeEnergy.setTemperature
      ~FreeEnergy.setTimeStep
   
   

   
   
   